# kardinality

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  KARDLANG.md  README.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: deploy.yml  e2e.yml  release.yml
bundle-web/public/: index.html
bundle-web/public/assets/: kardinality-dxhb5248d874d531e39.js  kardinality-dxhdfd118401db25f6b.js  kardinality-dxhf410a58c7c7d3ab4.js  kardinality_bg-dxh31b47987d980a95.wasm  kardinality_bg-dxha6b7a2fbc207e49.wasm  kardinality_bg-dxhd63ae9255a35bc56.wasm
docs/: CHAT_MAIN.md
e2e/: interactions.spec.ts  layout.spec.ts  puzzles.spec.ts  smoke.spec.ts  tutorial-video.spec.ts
scripts/: compose_tutorial_video.mjs  e2e.sh  tutorial_video.sh
src/: lib.rs  main.rs
src/game/: cards.rs  engine.rs  mod.rs  model.rs  puzzles.rs  trace.rs
src/kardlang/: ast.rs  cost.rs  grammar.rs  lexer.rs  mod.rs  parser.rs  span.rs  token.rs
src/ui/: anim.rs  app.rs  mod.rs  state.rs  theme.rs
src/ui/views/: cards.rs  deck.rs  hud.rs  kardinomicon.rs  mod.rs  pile.rs  sidebar.rs
src/vm/: effects.rs  limits.rs  machine.rs  mod.rs
