[package]
name = "kardinality"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Dioxus UI (DOM + CSS) for the browser build.
dioxus = { version = "0.7.2", features = ["web"] }

# Better panics in the browser console.
console_error_panic_hook = "0.1"

# Browser APIs for animations and DOM inspection (used via Rust; no hand-written JS).
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "DomRect", "HtmlElement", "CssStyleDeclaration"] }

# Ensure `rand` works on wasm by enabling JS-backed entropy (even though we prefer deterministic seeds).
getrandom = { version = "0.2", features = ["js"] }
